fixed profile picture being too small, added Head component

--- a/src/components/Layout/MainLayout/Headerbar/Headerbar.module.css
+++ b/src/components/Layout/MainLayout/Headerbar/Headerbar.module.css
@@ -19,20 +19,21 @@
 .userNav button {
 	padding: 0;
 	border: 0;
-	width: 50px;
-	height: 50px;
+	width: 45px;
+	height: 45px;
 	border-radius: 50%;
 	background-color: white;
 }
 .userNav button:hover,
 .userNav button:focus {
-	background-color: rgba(250, 250, 250, 0.9);
+	background-color: rgba(250, 250, 250, 0.85);
 	outline: 2px solid var(--clr-purple);
 }
 
 .userNavItems {
 	position: absolute;
 	right: 0;
+	margin-top: 0.5em;
 	padding-block: 0.5rem;
 	border-radius: 0.4em;
 	background-color: var(--clr-secondary);
